--- a/ckanext/rvr/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/rvr/templates/package/snippets/package_basic_fields.html
@@ -5,3 +5,78 @@
 {% block package_basic_fields_description %}
   {{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, is_required=true) }}
 {% endblock %}
+
+{% block package_basic_fields_org %}
+  {# if we have a default group then this wants remembering #}
+  {% if data.group_id %}
+  <input type="hidden" name="groups__0__id" value="{{ data.group_id }}" />
+  {% endif %}
+
+  {% set dataset_is_draft = data.get('state', 'draft').startswith('draft') or data.get('state', 'none') ==  'none' %}
+  {% set dataset_has_organization = data.owner_org or data.group_id %}
+  {% set organizations_available = h.organizations_available('create_dataset') %}
+  {% set user_can_update_owner_org = h.can_update_owner_org(data, organizations_available) %}
+  {% set user_is_sysadmin = h.check_access('sysadmin') %}
+  {% set show_organizations_selector = organizations_available and user_can_update_owner_org %}
+  {% set show_visibility_selector = dataset_has_organization or (organizations_available and (user_is_sysadmin or dataset_is_draft)) %}
+
+  {% if show_organizations_selector and show_visibility_selector %}
+  <div data-module="dataset-visibility">
+    {% endif %}
+
+    {% if show_organizations_selector %}
+    {% set existing_org = data.owner_org or data.group_id %}
+    {% set org_error = errors.owner_org %}
+    <div class="form-group control-medium">
+      <label for="field-organizations" class="control-label">
+        <span title="this field is required" class="control-required">*</span>
+        {{ _('Organization') }}
+      </label>
+      <div class="controls">
+        <select id="field-organizations" name="owner_org" data-module="autocomplete">
+          <option value="" {% if not selected_org and not data.id %} selected="selected" {% endif %}>{{ _('No Organization') }}</option>
+          {% for organization in organizations_available %}
+            {% set selected_org = (existing_org and existing_org == organization.id) %}
+            <option value="{{ organization.id }}" {% if selected_org %} selected="selected" {% endif %}>{{ organization.display_name }}</option>
+          {% endfor %}
+        </select>
+        {% if org_error %}
+          <span class="error-block">{{ org_error[0] }}</span>
+        {% endif %}
+      </div>
+    </div>
+    {% endif %}
+
+    {% if show_visibility_selector %}
+    {% block package_metadata_fields_visibility %}
+    <div class="form-group control-medium">
+      <label for="field-private" class="control-label">{{ _('Visibility') }}</label>
+      <div class="controls">
+        <select id="field-private" name="private" class="form-control">
+          {% for option in [('True', _('Private')), ('False', _('Public'))] %}
+          <option value="{{ option[0] }}" {% if option[0] == data.private|trim %}selected="selected"{% endif %}>{{ option[1] }}</option>
+          {% endfor %}
+        </select>
+      </div>
+    </div>
+    {% endblock %}
+    {% endif %}
+
+    {% if show_organizations_selector and show_visibility_selector %}
+  </div>
+  {% endif %}
+
+
+  {% if data.id and h.check_access('package_delete', {'id': data.id}) and data.state != 'active' %}
+  <div class="form-group control-medium">
+    <label for="field-state" class="control-label">{{ _('State') }}</label>
+    <div class="controls">
+      <select class="form-control" id="field-state" name="state">
+        <option value="active" {% if data.get('state', 'none') == 'active' %} selected="selected" {% endif %}>{{ _('Active') }}</option>
+        <option value="deleted" {% if data.get('state', 'none') == 'deleted' %} selected="selected" {% endif %}>{{ _('Deleted') }}</option>
+      </select>
+    </div>
+  </div>
+  {% endif %}
+
+  {% endblock %}
