--- a/ckanext/rvr/templates/package/search.html
+++ b/ckanext/rvr/templates/package/search.html
@@ -2,6 +2,22 @@
 
 {% block secondary_content %}
 {% snippet "spatial/snippets/spatial_query.html", default_extent="{\"type\":\"Polygon\",\"coordinates\":[[[6.48468017578125,50.890906622229174],[7.355346679687499,50.890906622229174],[7.355346679687499,51.472829664858644],[6.48468017578125,51.472829664858644],[6.48468017578125,50.890906622229174]]]}" %}
-{{ super() }}
+    <div class="filters">
+        <div>
+            {% for facet in facet_titles %}
+                {{ h.snippet('snippets/facet_list.html', title=facet_titles[facet], name=facet, search_facets=search_facets, dateranges=dateranges ) }}
+            {% endfor %}
+        </div>
+        <a class="close no-text hide-filters"><i class="fa fa-times-circle"></i><span class="text">close</span></a>
+    </div>
+{% endblock %}
 
+{% block scripts %}
+  {{ super() }}
+  {% asset 'rvr/daterange_js' %}
+{% endblock %}
+
+{% block styles %}
+  {{ super() }}
+  {% asset 'rvr/daterange_css' %}
 {% endblock %}
