--- a/ckanext/rvr/templates/snippets/facet_list.html
+++ b/ckanext/rvr/templates/snippets/facet_list.html
@@ -1,61 +1,92 @@
 {% ckan_extends %}
 
-{% block facet_list_items %}
-{% with items = items or h.get_facet_items_dict(name, limit=1000) %}
-{% set transports = items|selectattr('name','equalto','verkehrsdaten-metropole-ruhr')%}
-{% if items %}
-<nav>
-    <ul class="{{ nav_class or 'list-unstyled nav nav-simple nav-facet' }}">
-        {#
-            Transport und Verkehrsdaten Seperat über alle anderen Gruppen in Fett anzeigen auf url /verkehrsdaten
-            
-            #}
-            
-        {% for transport in transports %}
-        {% set href = h.remove_url_param(name, transport.name, extras=extras, alternative_url=alternative_url) if transport.active else h.add_url_param(new_params={name: transport.name}, extras=extras, alternative_url=alternative_url) %}
-        {% set label = label_function(transport) if label_function else transport.display_name %}
-        {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
-        {% set count = count_label(transport['count']) if count_label else ('%d' % transport['count']) %}
-        <li class="{{ nav_item_class or 'nav-item' }}{% if transport.active %} active{% endif %}">
-            <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
-                <span class="item-label"><b>{{ label_truncated }}</b></span>
-                <span class="hidden separator"> - </span>
-                <span class="item-count badge">{{ count }}</span>
-            </a>
-        </li>
-        {% endfor %}
-        {% for item in items|rejectattr('name','equalto','verkehrsdaten-metropole-ruhr') %}
-        
-            {% if loop.index < 10  or  h.get_param_int('_%s_limit' % name) == 0  %}
-            {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
-            {% set label = label_function(item) if label_function else item.display_name %}
-            {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
-            {% set count = count_label(item['count']) if count_label else ('%d' % item['count']) %}
-            <li class="{{ nav_item_class or 'nav-item' }}{% if item.active %} active{% endif %}">
-                <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
-                    <span class="item-label">{{ label_truncated }}</span>
-                    <span class="hidden separator"> - </span>
-                    <span class="item-count badge">{{ count }}</span>
-                </a>
-            </li>
-            {% endif %}
-        {% endfor %}
-    </ul>
-</nav>
+{% set daterange_fields = ['Date Created', 'Last Updated', 'Issued', 'Modified'] %}
 
-<p class="module-footer">
-    {% if h.get_param_int('_%s_limit' % name) %}
-    {% if h.has_more_facets(name,search_facets or c.search_facets) %}
-    <a href="{{ h.remove_url_param('_%s_limit' % name, replace=0, extras=extras, alternative_url=alternative_url) }}"
-        class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
-    {% endif %}
-    {% else %}
-    <a href="{{ h.remove_url_param('_%s_limit' % name, extras=extras, alternative_url=alternative_url) }}"
-        class="read-more">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a>
-    {% endif %}
-</p>
-{% else %}
-<p class="module-content empty">{{ _('There are no {facet_type} that match this search').format(facet_type=title) }}</p>
-{% endif %}
-{% endwith %}
+{% block facet_list %}
+    {% set hide_empty = hide_empty or false %}
+    {% with items = items or h.get_facet_items_dict(name, search_facets or c.search_facets) %}
+        {% if items or not hide_empty %}
+            {% if within_tertiary %}
+            {% set nav_class = 'nav nav-pills nav-stacked' %}
+            {% set nav_item_class = ' ' %}
+            {% set wrapper_class = 'nav-facet nav-facet-tertiary' %}
+            {% endif %}
+            {% block facet_list_item %}
+                <section class="{{ wrapper_class or 'module module-narrow module-shallow' }}">
+                    {% block facet_list_heading %}
+                    <h2 class="module-heading">
+                        <i class="fa fa-filter"></i>
+                        {% set title = title or h.get_facet_title(name) %}
+                        {{ title }}
+                    </h2>
+                    {% endblock %}
+
+                    {% if title not in daterange_fields %}
+                        {% block facet_list_items %}
+                            {% with items = items or h.get_facet_items_dict(name, limit=1000) %}
+                                {% set transports = items|selectattr('name','equalto','verkehrsdaten-metropole-ruhr')%}
+                                {% if items %}
+                                    <nav>
+                                        <ul class="{{ nav_class or 'list-unstyled nav nav-simple nav-facet' }}">
+                                            {#
+                                                Transport und Verkehrsdaten Seperat über alle anderen Gruppen in Fett anzeigen auf url /verkehrsdaten
+                                                
+                                                #}
+                                                
+                                            {% for transport in transports %}
+                                            {% set href = h.remove_url_param(name, transport.name, extras=extras, alternative_url=alternative_url) if transport.active else h.add_url_param(new_params={name: transport.name}, extras=extras, alternative_url=alternative_url) %}
+                                            {% set label = label_function(transport) if label_function else transport.display_name %}
+                                            {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
+                                            {% set count = count_label(transport['count']) if count_label else ('%d' % transport['count']) %}
+                                            <li class="{{ nav_item_class or 'nav-item' }}{% if transport.active %} active{% endif %}">
+                                                <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
+                                                    <span class="item-label"><b>{{ label_truncated }}</b></span>
+                                                    <span class="hidden separator"> - </span>
+                                                    {# <span class="item-count badge">{{ count }}</span> #}
+                                                </a>
+                                            </li>
+                                            {% endfor %}
+                                            {% for item in items|rejectattr('name','equalto','verkehrsdaten-metropole-ruhr') %}
+                                            
+                                                {% if loop.index < 10  or  h.get_param_int('_%s_limit' % name) == 0  %}
+                                                {% set href = h.remove_url_param(name, item.name, extras=extras, alternative_url=alternative_url) if item.active else h.add_url_param(new_params={name: item.name}, extras=extras, alternative_url=alternative_url) %}
+                                                {% set label = label_function(item) if label_function else item.display_name %}
+                                                {% set label_truncated = h.truncate(label, 22) if not label_function else label %}
+                                                {% set count = count_label(item['count']) if count_label else ('%d' % item['count']) %}
+                                                <li class="{{ nav_item_class or 'nav-item' }}{% if item.active %} active{% endif %}">
+                                                    <a href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
+                                                        <span class="item-label">{{ label_truncated }}</span>
+                                                        <span class="hidden separator"> - </span>
+                                                        {# <span class="item-count badge">{{ count }}</span> #}
+                                                    </a>
+                                                </li>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </ul>
+                                    </nav>
+
+                                    <p class="module-footer">
+                                        {% if h.get_param_int('_%s_limit' % name) %}
+                                            {% if h.has_more_facets(name,search_facets or c.search_facets) %}
+                                                <a href="{{ h.remove_url_param('_%s_limit' % name, replace=0, extras=extras, alternative_url=alternative_url) }}"
+                                                    class="read-more">{{ _('Show More {facet_type}').format(facet_type=title) }}</a>
+                                            {% endif %}
+                                        {% else %}
+                                        <a href="{{ h.remove_url_param('_%s_limit' % name, extras=extras, alternative_url=alternative_url) }}"
+                                            class="read-more">{{ _('Show Only Popular {facet_type}').format(facet_type=title) }}</a>
+                                        {% endif %}
+                                    </p>
+                                    {% else %}
+                                    <p class="module-content empty">{{ _('There are no {facet_type} that match this search').format(facet_type=title) }}</p>
+                                {% endif %}
+                            {% endwith %}
+                        {% endblock %}
+                    {% else %}
+                        {{ h.snippet('snippets/daterange_facet.html', title=title, name=name, dateranges=dateranges) }}
+                    {% endif %}
+
+                </section>
+            {% endblock %}
+        {% endif %}
+    {% endwith %}
 {% endblock %}
