--- a/ckanext/rvr/templates/snippets/daterange_facet.html
+++ b/ckanext/rvr/templates/snippets/daterange_facet.html
@@ -1,9 +1,19 @@
-<div id="{{name}}-daterange-parent" class="nav-item daterange-picker">
+<div class="nav-item daterange-picker">
+    <select id="daterange-select">
+        {% for option in options %}
+            <option value={{ option['name'] }} {% if option['name'] == active %} selected="selected"{% endif %}>
+                {{ option['title'] }}
+            </option>
+        {% endfor %}
+    </select>
+</div>
+
+<div id="daterange-parent" class="nav-item daterange-picker">
     <input
         type="text"
         name="daterange"
-        id="{{ name }}-daterange-field"
-        data-startdate="{{ dateranges[name][0] }}"
-        data-enddate="{{ dateranges[name][1] }}"
+        id="daterange-input-field"
+        data-startdate="{{ dateranges[active]['params'][0] }}"
+        data-enddate="{{ dateranges[active]['params'][1] }}"
     />
 </div>
