--- a/ckanext/rvr/templates/package/search.html
+++ b/ckanext/rvr/templates/package/search.html
@@ -5,7 +5,7 @@
     <div class="filters">
         <div>
             {% for facet in facet_titles %}
-                {{ h.snippet('snippets/facet_list.html', title=facet_titles[facet], name=facet, search_facets=search_facets, dateranges=dateranges ) }}
+                {{ h.snippet('snippets/facet_list.html', title=facet_titles[facet], name=facet, search_facets=search_facets, dateranges=dateranges, active_range=active_range, daterange_options=daterange_options ) }}
             {% endfor %}
         </div>
         <a class="close no-text hide-filters"><i class="fa fa-times-circle"></i><span class="text">close</span></a>
