--- a/ckanext/rvr/templates/package/search.html
+++ b/ckanext/rvr/templates/package/search.html
@@ -1,7 +1,7 @@
 {% ckan_extends %}
 
 {% block secondary_content %}
-{% snippet "spatial/snippets/spatial_query.html", default_extent="{\"type\":\"Polygon\",\"coordinates\":[[[6.48468017578125,50.890906622229174],[7.355346679687499,50.890906622229174],[7.355346679687499,51.472829664858644],[6.48468017578125,51.472829664858644],[6.48468017578125,50.890906622229174]]]}" %}
+{% snippet "spatial/spatial_query.html", map_extent="{\"type\":\"Polygon\",\"coordinates\":[[[6.48468017578125,50.890906622229174],[7.355346679687499,50.890906622229174],[7.355346679687499,51.472829664858644],[6.48468017578125,51.472829664858644],[6.48468017578125,50.890906622229174]]]}" %}
     <div class="filters">
         <div>
             {% for facet in facet_titles %}
@@ -15,6 +15,7 @@
 {% block scripts %}
   {{ super() }}
   {% asset 'rvr/daterange_js' %}
+  {% asset 'rvr/spatial_query_js' %}
 {% endblock %}
 
 {% block styles %}
