--- a/ckanext/rvr/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/rvr/templates/package/snippets/package_basic_fields.html
@@ -79,4 +79,44 @@
   </div>
   {% endif %}
 
-  {% endblock %}
+  {% set spatial_value = data.get('spatial', '') %}
+  {% set bbox_value = data.get('dataset_spatial', '') %}
+  <div class="form-group control-medium">
+      
+      
+  </div>
+  <div class="form-group control-full">
+    <label class="control-label" for="field-org-bbox">Organization Coordinates</label>
+    {% if bbox_value|length < 3 %}
+      Currently using organization data
+    {% endif %}
+    <div class="controls ">
+      <input id="field-dataset-bbox" type="hidden" name="dataset_spatial" value="{{ bbox_value }}" placeholder="Map Data" class="form-control">
+    </div>
+
+    <div class="map-draw-form-group">
+        <div class="dataset-map"
+            data-module="rvr-bbox-generator"
+            data-currentspatial="{{ spatial_value }}"
+            data-spatialfield="field-dataset-bbox"
+        >
+            <div id="dataset-map-container" class="map-draw-field"></div>
+        </div>
+        <div id="dataset-map-attribution">
+            Click the pen icon to start drawing. {% if bbox_value|length < 3 %}Changes made would override the organization default{% endif %}
+            {% snippet "spatial/snippets/rvr_map_attribution.html" %}
+        </div>
+        <div class="btn-toolbar" role="toolbar" aria-label="controls">
+            {# <div class="btn-group btn-group-sm" role="group" aria-label="cancel">
+                <button type="button" id="cancel-map-draw-modal" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div> #}
+            <div class="btn-group btn-group-sm" role="group" aria-label="apply">
+                <button type="button" id="apply-map-draw-modal" class="btn disabled">Apply</button>
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <input id="field-spatial" type="hidden" name="spatial" value="{{ spatial_value }}" placeholder="Spatial Data" class="form-control">
+
+{% endblock %}
