--- a/ckanext/rvr/templates/package/read_base.html
+++ b/ckanext/rvr/templates/package/read_base.html
@@ -5,7 +5,7 @@
 {{ super() }}
 <section class="module module-narrow">
       <h2 class="module-heading"> {{ _('Karte') }}</h2>
-    {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial', '') %}
+    {% set dataset_extent = c.pkg_dict.get('spatial', '') %}
     {% if dataset_extent %}
         {% snippet "spatial/snippets/dataset_map_base.html", extent=dataset_extent %}
     {% endif %}
