--- a/ckanext/rvr/templates/package/snippets/resource_form.html
+++ b/ckanext/rvr/templates/package/snippets/resource_form.html
@@ -3,12 +3,12 @@
     {% if stage is iterable and stage is not number  %}
         {% set user = c.userobj %}
 
-        <a data-toggle="tooltip" 
+    <!--    <a data-toggle="tooltip" 
         title="Mit dem Tool können Sie CSV Dateien in weitere Formate konvertieren und alle Dateiformate automatisch unter den Ressourcen bereitstellen."  
         incon="plus" 
         class="btn btn-primary" 
         href="https://odconvert-rvr.ckan.de/ckanconverter/?dataset_name={{ pkg_name }}&api_token={{ user.apikey }}&action_name=new_resource">
-        <i class="fa fa-plus"></i>{{ _('CSV Multikonverter') }}</a>    
+        <i class="fa fa-plus"></i>{{ _('CSV Multikonverter') }}</a>    -->
     {% endif %}
 
     {{ super() }}
